# src/main/kotlin/org/rayleigh/data/area/AreaUpdateRequest.kt
@@ -1,0 +1,6 @@
+package org.rayleigh.data.area
+
+class AreaUpdateRequest(
+    var name: String? = null
+) {
+}
