# src/main/kotlin/org/rayleigh/data/deposit/DepositUpdateRequest.kt
@@ -1,0 +1,6 @@
+package org.rayleigh.data.deposit
+
+class DepositUpdateRequest(
+    var value: Int = 0
+) {
+}
