# src/main/kotlin/org/rayleigh/data/item/ItemUpdateRequest.kt
@@ -1,6 +1,13 @@
 package org.rayleigh.data.item
 
-import org.rayleigh.entity.Image
+import java.math.BigDecimal
 
-class ItemUpdateRequest(var name: String? = null, var image: Image? = null, var scoreValue: Int = 0) {
+class ItemUpdateRequest(
+    var name: String? = null,
+    var price: BigDecimal = BigDecimal.ZERO,
+    var quantity: Int = 0,
+    var color: String? = null,
+    var areaIds: List<Long> = emptyList(),
+    var depositId: Long = 0
+) {
 }
