# src/main/kotlin/org/rayleigh/entity/Area.kt
@@ -1,0 +1,19 @@
+package org.rayleigh.entity
+
+import jakarta.persistence.Entity
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.GenerationType
+import jakarta.persistence.Id
+import jakarta.persistence.Table
+
+@Entity
+@Table(name = "areas")
+class Area(
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    var id: Long? = 0,
+
+    var name: String = "",
+
+)
